# rustrade

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  changes-summary.md  deny.toml
barter-execution/: Cargo.toml  README.md
barter-execution/examples/: hyperliquid_execution.rs  hyperliquid_spot_execution.rs  ibkr_execution.rs
barter-execution/src/: error.rs  fee.rs  fill.rs  indexer.rs  lib.rs  map.rs  position.rs  trade.rs
barter-execution/src/client/: mod.rs
barter-execution/src/client/alpaca/: mod.rs
barter-execution/src/client/binance/: mod.rs
barter-execution/src/client/hyperliquid/: common.rs  config.rs  error.rs  mod.rs  spot.rs
barter-execution/src/client/ibkr/: account.rs  contract.rs  execution.rs  mod.rs  order.rs
barter-execution/src/client/mock/: mod.rs
barter-execution/src/exchange/mock/: account.rs  mod.rs  request.rs
barter-execution/src/order/: id.rs  mod.rs  request.rs  state.rs
barter-execution/tests/: hyperliquid_execution.rs  hyperliquid_spot_execution.rs  ibkr_execution.rs
barter-instrument/: Cargo.toml
barter-instrument/src/: exchange.rs  lib.rs
barter-instrument/src/ibkr/: contract.rs  mod.rs
barter-instrument/src/index/: builder.rs  mod.rs
barter-instrument/src/instrument/market_data/: mod.rs
barter-macro/: Cargo.toml
barter-macro/src/: lib.rs
rustrade/: Cargo.toml  README.md
rustrade-data/: Cargo.toml  README.md
rustrade-data/examples/: binance_candles.rs  binance_historical.rs  download_databento_fixtures.rs  dynamic_multi_stream_multi_exchange.rs  hyperliquid_historical.rs  hyperliquid_market_data.rs  hyperliquid_spot_market_data.rs  ibkr_flex_corporate_actions.rs  ibkr_historical.rs  ibkr_market_data.rs  indexed_market_stream.rs  multi_stream_multi_exchange.rs  order_books_l1_streams.rs  order_books_l1_streams_multi_exchange.rs  order_books_l2_manager.rs  order_books_l2_streams.rs  public_trades_streams.rs  public_trades_streams_multi_exchange.rs
rustrade-data/src/: error.rs  event.rs  instrument.rs  lib.rs
rustrade-data/src/books/: manager.rs  mod.rs
rustrade-data/src/exchange/: mod.rs  subscription.rs
rustrade-data/src/exchange/alpaca/: channel.rs  corporate_action.rs  market.rs  mod.rs  quote.rs  reference.rs  rest.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/binance/: channel.rs  error.rs  historical.rs  kline.rs  market.rs  mod.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/bitfinex/: market.rs  message.rs  mod.rs  subscription.rs  trade.rs  validator.rs
rustrade-data/src/exchange/bitmex/: market.rs  message.rs  mod.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/bybit/: market.rs  message.rs  mod.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/coinbase/: market.rs  mod.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/databento/: error.rs  historical.rs  live.rs  mod.rs  transformer.rs
rustrade-data/src/exchange/gateio/: channel.rs  market.rs  mod.rs  subscription.rs
rustrade-data/src/exchange/hyperliquid/: book.rs  channel.rs  historical.rs  market.rs  mod.rs  spot_meta.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/ibkr/: depth.rs  greeks.rs  historical.rs  mod.rs  options.rs  quotes.rs  subscription.rs  trades.rs
rustrade-data/src/exchange/kraken/: market.rs  message.rs  mod.rs  subscription.rs  trade.rs
rustrade-data/src/exchange/massive/: corporate_action.rs  error.rs  live.rs  mod.rs  options.rs  reference.rs  rest.rs  transformer.rs
rustrade-data/src/exchange/okx/: market.rs  (+3 more)
rustrade-data/src/streams/: consumer.rs  mod.rs
rustrade-data/src/subscriber/: mapper.rs  mod.rs  validator.rs
rustrade-data/src/subscription/: book.rs  candle.rs  greeks.rs  liquidation.rs  mod.rs  quote.rs  trade.rs
rustrade-data/src/transformer/: mod.rs  stateless.rs
rustrade-data/tests/: alpaca_corporate_actions.rs  alpaca_data.rs  binance_ws_tier_canary.rs  databento_integration.rs  databento_transformer.rs  hyperliquid_data.rs  hyperliquid_spot_data.rs  ibkr_flex_corporate_actions.rs  ibkr_integration.rs  massive_integration.rs
rustrade-execution/: Cargo.toml  LICENSE  README.md
rustrade-execution/examples/: hyperliquid_execution.rs  hyperliquid_spot_execution.rs  ibkr_execution.rs
rustrade-execution/src/: balance.rs  error.rs  fee.rs  fill.rs  indexer.rs  lib.rs  map.rs  trade.rs
rustrade-execution/src/client/: mod.rs
rustrade-execution/src/order/: bracket.rs  id.rs  mod.rs  request.rs  state.rs
rustrade-execution/tests/: alpaca_integration.rs  binance_conditional_orders.rs  hyperliquid_execution.rs  hyperliquid_spot_execution.rs  ibkr_execution.rs
rustrade-integration/: Cargo.toml  README.md
rustrade-integration/examples/: signed_get_request.rs  simple_websocket_integration.rs
rustrade-integration/src/: corporate_action.rs  error.rs  lib.rs  subscription.rs
rustrade-integration/src/socket/: backoff.rs  on_stream_err_filter.rs
rustrade-macro/: Cargo.toml
rustrade-macro/src/: lib.rs
rustrade/benches/backtest/: mod.rs
rustrade/examples/: backtests_concurrent.rs  corporate_action_injection.rs  corporate_action_sourcing.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_backtest_with_candle_market_data.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs  statistical_trading_summary.rs
rustrade/examples/config/: backtest_config.json
rustrade/src/: error.rs  lib.rs
rustrade/src/backtest/: aux_events.rs  market_data.rs  mod.rs
rustrade/src/engine/: clock.rs  command.rs  error.rs  execution_tx.rs  mod.rs  run.rs
rustrade/src/execution/: builder.rs  error.rs  manager.rs  mod.rs  request.rs
rustrade/src/risk/: mod.rs
rustrade/src/statistic/: time.rs
rustrade/src/strategy/: algo.rs  close_positions.rs  mod.rs  on_disconnect.rs
rustrade/src/system/: builder.rs  config.rs  mod.rs
rustrade/tests/: test_backtest_aux_events.rs  test_engine_process_engine_event_with_audit.rs
(+214 files in other folders)
