[workspace]
resolver = "3"
members = [
    "rustrade",
    "rustrade-data",
    "rustrade-execution",
    "rustrade-integration",
    "rustrade-macro",
    "rustrade-instrument"
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Niqnil/rustrade"
homepage = "https://github.com/Niqnil/rustrade"
keywords = ["trading", "backtesting", "crypto", "stocks", "algorithmic"]
categories = ["finance", "simulation"]

[workspace.dependencies]
# Rustrade Ecosystem
rustrade-integration = { path = "./rustrade-integration", version = "0.4.0" }
rustrade-instrument = { path = "./rustrade-instrument", version = "0.4.0" }
rustrade-data = { path = "./rustrade-data", version = "0.4.0" }
rustrade-execution = { path = "./rustrade-execution", version = "0.4.0" }
rustrade-macro = { path = "./rustrade-macro", version = "0.4.0" }

# Logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

# Async
tokio = { version = "1.42", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.17" }
tokio-test = { version = "0.4.4" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
async-stream = { version = "0.3" }
pin-project = { version = "1.1.7" }

# Error
thiserror = { version = "2.0.8" }
anyhow = { version = "1" }

# SerDe
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
serde_qs = { version = "1.1.1" }
serde_urlencoded = { version = "0.7.1" }

# Protocol
url = { version = "2.5.4" }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "query"] }
tokio-tungstenite = { version = "0.29.0", features = ["url","rustls-tls-webpki-roots"] }

# Data Structures
vecmap-rs = { version = "0.2.2" }
parking_lot = { version = "0.12.3" }
lru = { version = "0.18" }
rust_decimal = { version = "1.36.0", features = ["maths", "serde-with-str"] }
smol_str = { version = "0.3.2" }
fnv = { version = "1.0.7" }
indexmap = { version = "2.6.0" }

# Crytographic Signatures
hmac = { version = "0.13.0" }
sha2 = { version = "0.11.0" }
hex = { version = "0.4.3" }
base64 = { version = "0.22.1" }

# Misc
rand = { version = "0.10.1" }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10" }
derive_more = { version = "2.0.1", features = [
    "constructor",
    "display",
    "from",
] }
itertools = { version = "0.14.0" }
rust_decimal_macros = { version = "1.29.1" }
bytes = { version = "1.5.0" }
spin_sleep = { version = "1.3.0 "}
criterion = { version = "0.8.2" }
wiremock = { version = "0.6" }
prost = { version = "0.14.3" }
temp-env = { version = "0.3" }
serial_test = { version = "3.2" }
