[package]
name = "barter-execution"
version = "0.7.0"
edition = "2024"
authors = ["JustAStream <justastream.code@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/barter-execution/"
repository = "https://github.com/barter-rs/barter-rs"
readme = "README.md"
description = "Stream private account data from financial venues, and execute (live or mock) orders."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]


[features]
default = []
binance = [
    "dep:binance-sdk",
    "dep:serde_json",
    "dep:anyhow",
    "dep:lru",
    "dep:parking_lot",
]

[dependencies]
# Barter Ecosystem
barter-integration = { workspace = true, features = ["collection", "error", "stream"] }
barter-instrument = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

# Data Structures
smol_str = { workspace = true }
fnv = { workspace = true }
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Misc
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"]}
itertools = { workspace = true }
derive_more = { workspace = true, features = ["constructor", "from", "display"]}

# Binance (optional, behind "binance" feature)
binance-sdk = { version = "=44.0.1", features = ["spot"], optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }  # Required: binance-sdk's public API returns anyhow::Result
lru = { workspace = true, optional = true }  # Event deduplication cache for reconnect resilience
parking_lot = { workspace = true, optional = true }  # Lighter mutex for dedup cache (no poisoning, no OS thread park)

[dev-dependencies]
# test-util enables tokio::time::pause() and advance() for behavioral timing tests
tokio = { workspace = true, features = ["test-util"] }

