[package]
name = "barter-execution"
version = "0.8.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
documentation = "https://docs.rs/barter-execution/"
repository = "https://github.com/Niqnil/barter-rs"
readme = "README.md"
description = "Stream private account data from financial venues, and execute (live or mock) orders."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]


[features]
default = []
alpaca = [
    "dep:reqwest",
    "dep:serde_json",
    "serde_json/raw_value", # RawValue borrow for zero-copy WS data field parsing
    "dep:lru",
    "dep:parking_lot",
    "dep:indexmap",
]
binance = [
    "dep:binance-sdk",
    "dep:serde_json",
    "dep:anyhow",
    "dep:lru",
    "dep:parking_lot",
]
ibkr = ["dep:ibapi", "dep:parking_lot", "dep:chrono-tz", "barter-instrument/ibkr"]

[dependencies]
# Barter Ecosystem
barter-integration = { workspace = true, features = [
    "collection",
    "error",
    "stream",
] }
barter-instrument = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

# Data Structures
smol_str = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true, optional = true }
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Misc
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
derive_more = { workspace = true, features = [
    "constructor",
    "from",
    "display",
] }

# Alpaca (optional, behind "alpaca" feature)
reqwest = { workspace = true, optional = true } # HTTP client for Alpaca REST API

# Binance (optional, behind "binance" feature)
binance-sdk = { version = "=44.0.1", features = ["spot"], optional = true }
anyhow = { workspace = true, optional = true }                              # Required: binance-sdk's public API returns anyhow::Result

# Shared between "alpaca" and "binance" features
serde_json = { workspace = true, optional = true }
lru = { workspace = true, optional = true }         # Event deduplication cache for reconnect resilience
parking_lot = { workspace = true, optional = true } # Lighter mutex for dedup cache (no poisoning, no OS thread park)

# IBKR (optional, behind "ibkr" feature)
ibapi = { version = "=2.11.0", optional = true, default-features = false, features = [
    "sync",
] }
chrono-tz = { workspace = true, optional = true }

[dev-dependencies]
# test-util enables tokio::time::pause() and advance() for behavioral timing tests
tokio = { workspace = true, features = ["test-util"] }
# Mock HTTP server for testing REST pagination and truncation logic (H-1, H-3)
wiremock = { workspace = true }
# Serde round-trip tests (L2)
serde_json = { workspace = true }
