[package]
name = "rustrade-data"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rustrade-data"
readme = "README.md"
description = "High performance & normalised WebSocket intergration for leading cryptocurrency exchanges - batteries included."

[features]
default = []
ibkr = ["dep:ibapi", "dep:time", "dep:quick-xml", "rustrade-instrument/ibkr"]
hyperliquid = ["dep:hyperliquid_rust_sdk"]
# `serde-float` lets the corporate-actions client deserialize `new_rate`/`old_rate` JSON numbers
# into `Decimal` (same approach as the Massive split client).
alpaca = ["rust_decimal/serde-float"]
databento = ["dep:databento"]
massive = ["dep:tokio-tungstenite", "dep:urlencoding", "rust_decimal/serde-float", "serde_json/raw_value"]

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
rust_decimal_macros = { workspace = true }
time = { version = "0.3", features = ["macros"] }  # For ibkr tests and databento examples
temp-env = { workspace = true }
serial_test = { workspace = true }  # For Massive WebSocket tests (1 connection limit)

[dependencies]
# Rustrade Ecosystem
rustrade-integration = { workspace = true, features = ["channel", "collection", "corporate-action", "error", "protocol", "serde", "subscription", "stream"] }
rustrade-instrument = { workspace = true }
rustrade-macro = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
futures-util = { workspace = true }
# Used by the always-on Binance historical klines REST client (and the optional
# Massive client). Plain dep — not feature-gated. Note for tier-2 review.
async-stream = { workspace = true }

# Protocol
url = { workspace = true }
reqwest = { workspace = true}

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Data Structures
parking_lot = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
smol_str = { workspace = true, features = ["serde"] }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
itertools = { workspace = true }
vecmap-rs = { workspace = true }
fnv = { workspace = true }

# IBKR (optional, behind "ibkr" feature)
ibapi = { version = "=3.0.1", optional = true, default-features = false, features = ["sync"] }
time = { version = "0.3", optional = true, features = ["macros"] }
# XML parser for IBKR Flex Web Service statements (corporate-action reconciliation). New normal dep
# (serde-xml-rs/xml-rs are only a build-dep of time-tz via ibapi, not reusable). Note for tier-2 review.
quick-xml = { workspace = true, optional = true }

# Hyperliquid (optional, behind "hyperliquid" feature)
hyperliquid_rust_sdk = { version = "0.6", optional = true }

# Databento (optional, behind "databento" feature)
# Note: databento re-exports dbn, so we don't need a separate dbn dependency.
# `chrono` enables `DateTimeRange: From<(DateTime<Utc>, DateTime<Utc>)>`, so the
# candle historical path can build `GetRangeParams` from a chrono range without a
# manual chrono->time conversion (chrono is already a core dependency).
databento = { version = "0.53", optional = true, features = ["chrono"] }

# Massive (optional, behind "massive" feature)
tokio-tungstenite = { version = "0.29", optional = true, features = ["native-tls"] }
urlencoding = { version = "2.1", optional = true }

# Examples that depend on optional features. Without `required-features`,
# `cargo check --all-targets` (default features) fails to compile them.

[[example]]
name = "download_databento_fixtures"
required-features = ["databento"]

[[example]]
name = "hyperliquid_historical"
required-features = ["hyperliquid"]

[[example]]
name = "hyperliquid_market_data"
required-features = ["hyperliquid"]

[[example]]
name = "hyperliquid_spot_market_data"
required-features = ["hyperliquid"]

[[example]]
name = "ibkr_historical"
required-features = ["ibkr"]

[[example]]
name = "ibkr_market_data"
required-features = ["ibkr"]

[[example]]
name = "ibkr_flex_corporate_actions"
required-features = ["ibkr"]
