[package]
name = "rustrade-macro"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rustrade-macro/"
description = "Rustrade ecosystem macros"

[lib]
proc-macro = true

[dependencies]
# Macro
proc-macro2 = "1.0.49"
syn = "2.0.117"
quote = "1.0.23"

# Misc
convert_case = "0.11.0"
