[package]
name = "rustrade"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rustrade"
readme = "README.md"
description = "Framework for building high-performance live-trading, paper-trading and back-testing systems"

[features]
# Forward provider market-data features so the corporate-action *sourcing* example can drive a real
# `StockSplitSource` impl (Massive's `MassiveRestClient` / Alpaca's `AlpacaRestClient`). Both off by
# default — the engine itself needs no provider; the example falls back to a canned offline source.
massive = ["rustrade-data/massive"]
alpaca = ["rustrade-data/alpaca"]

[[bench]]
name = "backtest"
path = "benches/backtest/mod.rs"
harness = false

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
spin_sleep = { workspace = true }
tokio = { workspace = true, features = ["fs"]}
criterion = { workspace = true }

[dependencies]
# Rustrade Ecosystem
rustrade-integration = { workspace = true }
rustrade-instrument = { workspace = true }
rustrade-data = { workspace = true }
rustrade-execution = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry"]}

# Async
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
pin-project = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Data Structures
smol_str = { workspace = true }
rust_decimal = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}

# Misc
chrono = { workspace = true, features = ["serde"]}
derive_more = { workspace = true, features = ["constructor", "from", "display"]}
prettytable-rs = "0.10.0"
itertools = { workspace = true }
parking_lot = { workspace = true }

